--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
     "node-cron": "^3.0.0",
+    "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
     "pg-format": "^1.0.4",
     "pg-hstore": "^2.3.4",
