--- a/client/package.json
+++ b/client/package.json
@@ -23,10 +23,11 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cd ../ && yarn start -p $PORT",
+    "build": "react-scripts build && (cd ../server && yarn install)",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "devStart": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
