--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "cd ../ && yarn start -p $PORT",
-    "build": "react-scripts build && (cd ../server && yarn install)",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "devStart": "react-scripts start"
